assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap'); 
*  {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background: url(..//images/disk.jpeg) no-repeat;
    background-size: cover;
    color:#dfe0e2;
    display: flex;
    width: 100vw;
    height: 100vh;
    align-items: center;
    justify-content: center;
    font-family: libre baskerville;
}

/* Heading style*/
header {
    display: flex; 
    position: fixed; 
    top: 0;
     left: 0; 
    right: 0; 
}

header a {
    text-decoration: none;
}

.head {
    text-align: center;
    font-size: xx-large;
    color: #e4e5e7;;
    background-color: black;
}

/* container style*/
.about-box {
    width:800px;
    height:500px;
    max-width: 80% ;
    margin: 0 auto;
    background:#000000a6;;
    border-radius: 5px ;
    text-align: center;
    padding: 65px;
}

#main-container {
    width:800px;
    height:max-content;
    max-width: 80% ;
    margin: 0 auto;
    background:#000000a6;;
    border-radius: 5px ;
    text-align: center;
    padding: 65px;

}

/** This is where I will style my buttons **/

.begin-btn{
   
    top: 80%;
    right: 50%;
    border-radius: 5px;
    background-color: white;
    font-size: 20px;
    text-decoration: none;
    color: black;
    text-shadow: none;
    border-radius: 5px;
    padding: 5px 10px;
    cursor: pointer;
}

.btn-grid {
    display: grid;
    grid-template-columns: repeat(2,auto);
    gap:20px;
    margin: 20px 0;
}


.begin-btn :hover , .controls :hover {
    background-color: red;
    color: aliceblue;
   cursor: pointer; }


button {
    
    font-size: 20px;
    font-weight: 400;
    color: black;
    border-radius: 5px;
    padding: 5px 10px;
    cursor: pointer;
}

#answer-btn :hover {
    background-color: yellow ;
}

.controls {
    display: flex;
    justify-content: center;
    align-items: center;
}

.hide {
    display: none;
}
 
/* This is where I will style my main area*/
.about-title {
    font-size: 45px;
    font-weight: bold;
    margin-bottom: 1rem;
    font-style: italic;

}
.about1 {
    text-decoration: underline;
    color: red;
}

.about-list {
    line-height: 3rem;
    font-size: 30px;
    color: #eef9ff;
    text-shadow: 2px 1.3px black
}

.time {
    font-size: 1rem;
    color: red;
    text-align: right;
    left: 65%;
    position: absolute;
    top:30%;
}
#score-tracker {
    float: left;
    color: red;
    font-size: 1.5rem;
}

/* style for viewing on medium size devices*/

@media screen and (max-width :887px) {

    .about-box {
        width:500px;
        height: 100%;
        
    }

.about-title {
    font-size: 30px;
    margin: 0;
}

.about-list {
    font-size: 25px;
    color: white;
    line-height: 2em;
}

.begin-btn {
    font-size: 15px;
    font-weight: bold;
    top: 72%;
    position: static !important
   
}

.time {
    top:32%;
    left:70%;
    font-size: 1em;
}
}



@media screen and (max-width :469px){
    
    #main-container {
        width: auto;
        height: 450px;
    }

    .about-box {   
        padding-left: 19px;
        flex-direction: column-reverse;
        background-color: transparent;}

    .about-title{
        font-size: 20px;
    }

    .about-list {
            font-size: 19px;
    color: red;
    text-shadow: none;
    font-style: italic;
    font-weight: bold;
    }

    .time {
        font-size: 0.75em;
        top:72%;
        left: 60%;
    }

    button {
        padding: 0%;
    }
}

